--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,30 +2,64 @@
 
 <div class="row mt-3">
     <div class="col-8 offset-3">
-    <h3>Listing Details </h3>
+    <h3><b><%= listing.title %></b></h3>
     </div>
     <br/><br/>
 
-    <div class="card col-6 offset-3 show-card">
+    <div class="card col-6 offset-3 show-card listing-card">
         <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
             <p class="card-text">
-                <b><%= listing.title %></b><br/>
                 <%= listing.description %><br/>
                 &#8377; <%= listing.price.toLocaleString("en-IN") %> <br/>
                 <%= listing.location %> <br/>
-                <%= listing.country %> <br/>
+                <%= listing.country %> 
             </p>
         </div>
     </div>
-</div>
 
+    <br/>
     <div class="btns">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit </a>
 
         <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
             <button class="btn btn-dark show-btn offset-5">Delete </button>
         </form>
+    </div>
+    
+    <div class="col-8 offset-3 mt-3">
+        <hr/>
+        <h4>Leave a Review</h4>
+        <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
+            <div class="mb-3 mt-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range"/>
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="comment" class="form-label">Comments</label>
+                <textarea name="review[comment]" id="comment" cols="30" row="5"
+                class="form-control" required></textarea>
+                <div class="invalid-feedback">Please add some comments for the review.</div>
+            </div>
+            <button class="btn btn-outline-dark">Submit</button>
+        </form><br/><br/>
+
+        <p><b>All Reviews</b></p>
+        <div class="row col-5 ms-3 mb-3">
+            <% for(review of listing.reviews) { %>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Jnae Doe</h5>
+                        <p class="card-text"> <%= review.comment %> </p>
+                        <p class="card-text"> <%= review.rating %> stars </p>
+                    </div><br/>
+                    <form class="mb-3" method="POST" action="/listings/<%= listing.id %>/reviews/<%= review._id%>?_method=DELETE" >
+                        <button class="btn btn-sm btn-dark">Delete</button>
+                    </form>
+                </div>            
+            <% } %>
+        </div>
 
     </div>
-    <br/><br/>
+</div>
+<br/>
