--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,7 +1,7 @@
 <!-- success -->
 <% if(success && success.length) { %> 
     <div class="alert alert-success alert-dismissible fade show col-6 offset-3" role="alert">
-        <=% success %>
+        <%= success %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
@@ -9,7 +9,7 @@
 <!-- error -->
 <% if(error && error.length) { %> 
     <div class="alert alert-danger alert-dismissible fade show col-6 offset-3" role="alert">
-        <=% error %>
+        <%= error %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
