--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -9,16 +9,16 @@
     <div class="card col-6 offset-3 show-card listing-card">
         <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
-            <p class="card-text">
-                <%= listing.description %><br/>
-                &#8377; <%= listing.price.toLocaleString("en-IN") %> <br/>
-                <%= listing.location %> <br/>
-                <%= listing.country %> 
-            </p>
+            <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
+            <p class="card-text"><%= listing.description %></p>
+            <p class="card-text">&#8377; <%= listing.price.toLocaleString("en-IN") %> </p>
+            <p class="card-text"><%= listing.location %></p>
+            <p class="card-text"><%= listing.country %></p> 
         </div>
     </div>
 
     <br/>
+    <% if(currUser && listing.owner._id.equals(currUser.id)){ %>
     <div class="btns">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit </a>
 
@@ -26,11 +26,12 @@
             <button class="btn btn-dark show-btn offset-5">Delete </button>
         </form>
     </div>
-    
+    <% } %>
+
     <div class="col-8 offset-3 mt-3">
-        <hr/>
+        <% if(currUser){ %><hr/>
         <h4>Leave a Review</h4>
-        <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
+        <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
             <div class="mb-3 mt-3">
                 <label for="rating" class="form-label">Rating</label>
                 <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range"/>
@@ -42,18 +43,21 @@
                 <div class="invalid-feedback">Please add some comments for the review.</div>
             </div>
             <button class="btn btn-outline-dark">Submit</button>
-        </form><br/><br/>
+        </form>
+        <% } %>
+        <br/><hr/>
+        
 
         <p><b>All Reviews</b></p>
-        <div class="row col-5 ms-3 mb-3">
+        <div class="row">
             <% for(review of listing.reviews) { %>
-                <div class="card">
+                <div class="card col-5 ms-3 mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">Jnae Doe</h5>
+                        <h5 class="card-title">@ <% review.author.username %></h5>
                         <p class="card-text"> <%= review.comment %> </p>
                         <p class="card-text"> <%= review.rating %> stars </p>
                     </div><br/>
-                    <form class="mb-3" method="POST" action="/listings/<%= listing.id %>/reviews/<%= review._id%>?_method=DELETE" >
+                    <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id%>?_method=DELETE" >
                         <button class="btn btn-sm btn-dark">Delete</button>
                     </form>
                 </div>            
