--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -47,7 +47,7 @@
         </div>
         <div class="navbar-nav ms-auto">
           <a class="nav-link" href="/listings/new">Airbnb your home</a>
-          <% if(!currUser) { %>
+          <% if(typeof currUser == 'undefined' && !currUser) { %>
           <a class="nav-link" href="/signup"><b>Sign up</b></a>
           <a class="nav-link" href="/login"><b>Log in</b></a>
           <% } %>
