--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -67,7 +67,7 @@
         <% } %>
         <br/><hr/>
         
-        <% if(listing.reviews.length >0) { %>
+        <% if(listing && listing.reviews && listing.reviews.length >0) { %>
         <div class="row">
             <p><b>All Reviews</b></p>
             <% for(review of listing.reviews) { %>
