--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 <script>
     const mapToken="<%= process.env.MAP_TOKEN %>";
-    const listing = <%- JSON.stringify(listing) %>;
+    const listing = <%- JSON.stringify(listing) %> ;
 </script>
 <div class="row mt-3">
     <div class="col-8 offset-3">
@@ -22,7 +22,7 @@
 
     
     <% if(currUser && listing.owner._id.equals(currUser.id)){ %>
-        <br/>
+       
     <div class="btns">
         <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit </a>
 
@@ -73,8 +73,8 @@
             <p><b>All Reviews</b></p>
             <% for(review of listing.reviews) { %>
                 <div class="card col-5 ms-3 mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">@ <% review.author %></h5>
+                    <div class="card-body"><br/>
+                        <!-- <h5 class="card-title">@ <% review.author %></h5> -->
                         <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
                         <p class="card-text"> <%= review.comment %> </p>
                     </div><br/>
@@ -82,11 +82,13 @@
                         <button class="btn btn-sm btn-dark">Delete</button>
                     </form>
                 </div>            
-            <% } %>
+            <% } %><hr/>
         </div>
         <% } %>
+        
     </div>
     <div class="col-8 offset-3 mb-3">
+        
         <h3>Where you'll be</h3>
         <div id="map"></div>
     </div>
